problemm with scss

--- a/scr/tasks/task_4/scss/styles.scss
+++ b/scr/tasks/task_4/scss/styles.scss
@@ -1,2 +1,3 @@
-@import 'theme/_theme.css';
-@import 'components/header';
+@import "theme/_theme.scss";
+@import "components/_header.scss";
+@import "containers/home/_image-loader.scss";
