--- a/scr/tasks/task_4/scss/components/_header.scss
+++ b/scr/tasks/task_4/scss/components/_header.scss
@@ -6,7 +6,7 @@ $header-height: 80px;
 
   .header-nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     height: $header-height;
 
     .cart  {
@@ -24,6 +24,11 @@ $header-height: 80px;
             width: 25px;
         }
     }
+  }
+
+  .flex-center {
+      display: flex;
+      align-items: center;
   }
 
 
