add sass file stucture, add dir and project  imports

--- a/scr/tasks/task_4/scss/containers/home/_image-loader.scss
+++ b/scr/tasks/task_4/scss/containers/home/_image-loader.scss
@@ -1,3 +1,5 @@
+@import "../../theme/_theme-dir";
+
 .banner {
     position: relative;
     display: flex;
@@ -9,8 +11,7 @@
       text-align: center;
   
       h1 {
-        color: #fff;
-        font-size: 80px;
+        @include typo-h1;
       }
     }
   
