--- a/scr/tasks/task_4/scss/styles.scss
+++ b/scr/tasks/task_4/scss/styles.scss
@@ -1,3 +1,4 @@
-@import "theme/_theme.scss";
-@import "components/_header.scss";
+
 @import "containers/home/_image-loader.scss";
+@import "theme/__theme-dir";
+@import "components/_components-dir";
