--- a/scr/tasks/task_4/scss/theme/_theme.scss
+++ b/scr/tasks/task_4/scss/theme/_theme.scss
@@ -1,9 +1,15 @@
 body, button {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.width-cnt {
+  width: 1025px;
+  margin: 0 auto;
+
+  @media only screen and (max-width: 640px){
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
   }
-  
-  .width-cnt {
-    width: 1025px;
-    margin: 0 auto;
-  }
+}
