--- a/scr/tasks/task_4/scss/theme/_theme.scss
+++ b/scr/tasks/task_4/scss/theme/_theme.scss
@@ -1,4 +1,9 @@
-body, button {
+
+* {
+  box-sizing: border-box;
+}
+
+body, button, ul {
   margin: 0;
   padding: 0;
 }
@@ -6,8 +11,9 @@ body, button {
 .width-cnt {
   width: 1025px;
   margin: 0 auto;
+  position: relative;
 
-  @media only screen and (max-width: 640px){
+  @media only screen and (max-width: 640px) {
     width: 100%;
     padding-left: 30px;
     padding-right: 30px;
