--- a/scr/tasks/task_4/scss/components/_searchbar.scss
+++ b/scr/tasks/task_4/scss/components/_searchbar.scss
@@ -33,7 +33,7 @@ $popup-margin: 20px;
     width: 25px;
     height: 25px;
     margin-left: 10px;
-    background-image: url("../../public/assets/icons/search.svg");
+    background-image: url("../../assets/icons/search.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
