--- a/scr/tasks/task_4/scss/styles.scss
+++ b/scr/tasks/task_4/scss/styles.scss
@@ -1,4 +1,6 @@
 
 @import "containers/home/_image-loader.scss";
+@import "containers/home/_product_cnt.scss";
+@import "containers/home/_product_card.scss";
 @import "theme/__theme-dir";
 @import "components/_components-dir";
