--- a/scr/tasks/task_4/scss/containers/home/_product_card.scss
+++ b/scr/tasks/task_4/scss/containers/home/_product_card.scss
@@ -14,6 +14,7 @@
   border: 1px solid #E0E0E0;
   position: relative;
   font-family: "Roboto", sans-serif;
+  transition: all .5s ease-in-out;
 
 
   &_body {
