--- a/scr/tasks/task_4/scss/containers/home/_product_card.scss
+++ b/scr/tasks/task_4/scss/containers/home/_product_card.scss
@@ -31,7 +31,7 @@
       position: absolute;
       width: 20px !important;
       height: 20px !important;
-      z-index: 1;
+      //z-index: 1;
       top: 15px;
       right: 15px;
       background-image: url("../../assets/icons/like_empty.svg");
