--- a/scr/tasks/task_4/scss/theme/_mixins.scss
+++ b/scr/tasks/task_4/scss/theme/_mixins.scss
@@ -36,7 +36,7 @@
   align-items: center;
   border-radius: 10px;
   border: 1px solid $gray;
-  box-shadow: 0 0 3px 3px $gray;
+  box-shadow: 0 0 3px 3px rgba(0,0,0,0.15);
   margin-top: $margin-top;
 }
 
