--- a/scr/tasks/task_4/scss/components/_oops_popup.scss
+++ b/scr/tasks/task_4/scss/components/_oops_popup.scss
@@ -14,14 +14,15 @@
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  transition: ease 0.3s;
+  opacity: 1;
+  animation: fadeIn 0.3s;
+  transition: opacity 0.3s ease-out;
 
   &_no_matches {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    //width: 500px;
     padding: 40px 80px;
     background-color: #fff;
     border-radius: 10px;
@@ -35,6 +36,15 @@
     span {
       display: block;
       @include typo($color: $text_gray);
+    }
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
     }
   }
 }
