add: shopping cart model

--- a/scr/tasks/task_4/scss/components/__components-dir.scss
+++ b/scr/tasks/task_4/scss/components/__components-dir.scss
@@ -4,3 +4,5 @@
 @import "_filter.scss";
 @import "_popup_product_card.scss";
 @import "_oops_popup.scss";
+@import "_shopping_cart_button.scss";
+@import "_shopping_cart.scss";
