--- a/scr/tasks/task_4/scss/theme/_variables.scss
+++ b/scr/tasks/task_4/scss/theme/_variables.scss
@@ -2,8 +2,15 @@ $font-family: 'Poppins', sans-serif;
 
 
 //colors
+$black: #000;
+$white: #fff;
+$red: #F83245;
+$background_red: rgba(248, 50, 69, .15);
 $blue: #0E49B5;
 $gray: #E0E0E0;
 $lightblue: #2563d7;
 $text_gray: #767272;
 $dark_blue: #3B3E66;
+$background_blue: #DAE2EA;
+
+$border-top: 1px solid #C4C4C4;
