--- a/scr/tasks/task_4/scss/components/_popup_product_card.scss
+++ b/scr/tasks/task_4/scss/components/_popup_product_card.scss
@@ -3,10 +3,23 @@ $popup-margin_vertical: 30px;
 
 
 .popup {
+  &_wrapper{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   &_backdrop {
     position: fixed;
     display: flex;
+    z-index: 9999;
     align-items: center;
     justify-content: center;
     height: 100vh;
@@ -16,9 +29,12 @@ $popup-margin_vertical: 30px;
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    touch-action: none;
   }
 
   &_product_card {
+    position: absolute;
+    z-index: 99999;
     display: flex;
     flex-direction: row;
     //width: 1020px;
