--- a/scr/tasks/task_4/scss/theme/_mixins.scss
+++ b/scr/tasks/task_4/scss/theme/_mixins.scss
@@ -5,10 +5,10 @@
   font-family: $font-family;
   font-size: $font-size;
   font-weight: $font-weight;
-  color:$color;
+  color: $color;
 }
 
-@mixin button_active ($font_size: 18px, $text_color: #fff) {
+@mixin button_active($font_size: 18px, $text_color: #fff) {
   @include typo($font_size, normal, $text_color);
   background-color: $blue;
   border-radius: 12px;
@@ -26,17 +26,17 @@
   @include typo(60px, bold, #fff);
 }
 
-@mixin flex($direction: row){
+@mixin flex($direction: row) {
   display: flex;
   flex-direction: $direction;
 }
 
-@mixin card($margin-top) {
+@mixin card($margin-top: 0) {
   padding: 8px 8px;
   align-items: center;
   border-radius: 10px;
   border: 1px solid $gray;
-  box-shadow: 0 0 3px 3px rgba(0,0,0,0.15);
+  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.15);
   margin-top: $margin-top;
 }
 
@@ -45,4 +45,13 @@
   grid-template-columns: repeat($column_number, 1fr);
   grid-template-rows:  auto;
   grid-gap: 30px
+}
+
+@mixin cart_btn($background_color: $blue, $text_color: $white) {
+  @include typo(16px, 400, $text_color);
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 3px;
+  background-color: $background_color;
 }
