--- a/scr/tasks/task_4/scss/components/_shopping_cart.scss
+++ b/scr/tasks/task_4/scss/components/_shopping_cart.scss
@@ -33,6 +33,8 @@
   &_items_cnt {
     display: flex;
     flex-direction: column;
+    max-height: 380px !important;
+    overflow-y: scroll;
   }
 
   &_info {
@@ -124,4 +126,13 @@
       margin-left: 25px;
     }
   }
+}
+
+.cart_empty {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  @include typo(16px, 500, $blue);
+  padding: 20px;
+  width: 100%;
 }
