--- a/scr/tasks/task_4/scss/containers/home/_image-loader.scss
+++ b/scr/tasks/task_4/scss/containers/home/_image-loader.scss
@@ -3,6 +3,7 @@
 .banner {
   position: relative;
   display: flex;
+  margin-top: $header-height + 20;
   align-items: center;
   justify-content: center;
 
