--- a/scr/tasks/task_4/scss/components/_header.scss
+++ b/scr/tasks/task_4/scss/components/_header.scss
@@ -1,22 +1,27 @@
-$header-height: 80px;
+
 
 .header {
-    height: $header-height;
-  }
+  height: $header-height;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 0 3px 3px rgb(0 0 0 / 15%);
+  position: fixed;
+  z-index: 99999;
+}
 
-  .header-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: $header-height;
+.header-nav {
 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1025px;
+  height: $header-height;
+}
 
-  }
-
-  .flex-center {
-      display: flex;
-      align-items: center;
-  }
+.flex-center {
+  display: flex;
+  align-items: center;
+}
 
 
 
